--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "discord-bot",
+  "name": "simple-hi-bot",
   "version": "1.0.0",
-  "description": "A simple Discord bot that replies to !hi",
+  "description": "Tiny Discord bot that replies to !hi (uses .env)",
   "main": "node.js",
   "scripts": {
     "start": "node node.js"
   },
-  "author": "",
-  "license": "MIT",
+  "engines": {
+    "node": ">=16.9.0"
+  },
   "dependencies": {
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.1.4"
   }
 }
